--- a/configs/model/llm-jp-3-13b.yaml
+++ b/configs/model/llm-jp-3-13b.yaml
@@ -15,11 +15,11 @@ encoder_seq_length: 4096  # the sequence length of the encoder model, it will be
 sequence_parallel: False
 
 ## Activation Checkpoint
-activations_checkpoint_granularity: selective # 'selective' or 'full'
+activations_checkpoint_granularity: full # 'selective' or 'full'
 activations_checkpoint_method: uniform # 'uniform', 'block', not used with 'selective'
 # 'uniform' divides the total number of transformer layers and checkpoints the input activation of each chunk at the specified granularity
 # 'block' checkpoints the specified number of layers per pipeline stage at the specified granularity
-activations_checkpoint_num_layers: null # not used with 'selective'
+activations_checkpoint_num_layers: 1 # not used with 'selective'
 activations_checkpoint_layers_per_pipeline: null
 # This feature is valid only when used with pipeline-model-parallelism. More details in megatron_gpt_config.yaml.
 gradient_as_bucket_view: False
